--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-main{
-width: 100%;
-height: 100vh;
-background: url(/bg.png);
-background-position: center;
-background-size: cover;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-}
-.row{
+
+main {
+  width: 100%;
+  height: 100vh;
+  background: url(/bg.png);
+  background-position: center;
+  background-size: cover;
   display: flex;
-  width: 1000px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
   height: 75px;
   text-align: center;
   margin: 10px;
@@ -25,21 +26,47 @@ flex-direction: column;
   justify-content: center;
   font-size: 24px;
   color: rgb(71, 64, 64);
+
 }
-#search{
-    margin: 3px;
-    padding: 10px;
-    font-size: 20px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
+
+#search {
+  margin: 3px;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
 }
-img{
+
+img {
   height: 150px;
   width: 110px;
 }
-h1{
-  margin-bottom: 50px;
+
+h1 {
+  margin-bottom: 30px;
   color: rgb(71, 64, 64);
-  
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  main {
+    height: 75vh;
+  }
+
+  #search {
+    font-size: 1rem;
+  }
+
+  img {
+    height: 124px;
+    width: 84px;
+  }
+
+  .tempInfo {
+    font-size: 1.2rem;
+  }
 }
